# enscons

./: .gitignore  .hgignore  CHANGES  README  README.rst  SConstruct  get_build_ext.py  pyproject.toml  setup.py
.github/workflows/: sphinx.yml  upload-pypi-source.yml
docs/: Makefile  conf.py  index.md  index.rst  requirements.txt
enscons/: SConstruct.in  __init__.py  api.py  cli.py  cpyext.py  helpers.py  paths.py  pytar.py  setup.py  setup2toml.py  tags.py  toml.py  util.py
