[project]
name = "enscons"
description = "Tools for building Python packages with SCons"
version = "0.26.0"

authors = [
    {name = "Daniel Holth", email = "dholth@fastmail.fm"}
]
classifiers = [
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "scons>=3.0.5",
  "pytoml>=0.1",
  "setuptools",
  "wheel",
  "attrs",
  "packaging>=20.5",
  "editables;python_version>'3.0'",
]
keywords = ["packaging", "wheel"]
license = "MIT"
packages = ["enscons"]
readme = "README.rst"
src_root = "."
url = "https://github.com/dholth/enscons"

[project.optional-dependencies]
cli = ["click"]
doc = ["sphinx"]

[project.scripts]
setup2toml = "enscons.setup2toml:main"

[build-system]
build-backend = "enscons.api"
requires = ["pytoml>=0.1", "enscons>=0.26"]
