[project]
name = "enscons-forked"
description = "Tools for building Python packages with SCons (forked for providing some useful features)"
version = "0.28.0"

authors = [{ name = "Christoph Wiedemann", email = "62332054+cwiede@users.noreply.github.com" }]
classifiers = [
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "scons>=3.0.5",
  "pytoml>=0.1",
  "setuptools",
  "wheel",
  "attrs",
  "packaging>=20.9",
  "editables==0.2;python_version>'3.0'",
]
keywords = ["packaging", "wheel"]
license = "MIT"
packages = ["enscons"]
readme = "README.rst"
src_root = "."
url = "https://github.com/cwiede/enscons"

[project.optional-dependencies]
cli = ["click"]
docs = ["furo", "sphinx", "myst-parser", "mdit-py-plugins>=0.3.0"]

[project.scripts]
setup2toml = "enscons.setup2toml:main"

[build-system]
build-backend = "enscons.api"
backend-path = ["."] # only for bootstrapped enscons
requires = [
  "scons",
  "packaging",
  "pytoml>=0.1",
] # enscons users add "enscons>=0.28" to this list
