[project]
name = "enscons"
description = "Tools for building Python packages with SCons"
version = "0.30.0"

authors = [{ name = "Daniel Holth", email = "dholth@fastmail.fm" }]
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "scons>=3.0.5",
  "tomli;python_version<'3.11'",
  "setuptools",
  "wheel",
  "attrs",
  "packaging>=20.9",
  "editables",
]
keywords = ["packaging", "wheel"]
license = "MIT"
packages = ["enscons"]
readme = "README.rst"
src_root = "."
url = "https://github.com/dholth/enscons"

[project.optional-dependencies]
cli = ["click"]
docs = ["furo", "sphinx", "myst-parser", "mdit-py-plugins>=0.3.0"]

[project.scripts]
setup2toml = "enscons.setup2toml:main"

[build-system]
build-backend = "enscons.api"
backend-path = ["."] # only for bootstrapped enscons
requires = [
  "scons",
  "packaging",
  "tomli;python_version<'3.11'",
  "editables", # automatically picked up if not bootstrapping enscons
] # enscons users add "enscons>=0.28" to this list
